--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ h2 {font-size:46px; font-weight:normal;}
 #block-workEXP .workbox .work-do {margin-top:10px; font-size:16px;}
 
 /* block-prjEXP */
-#block-prjEXP {padding:50px 0 200px; width:100%; background-color:#129DE7; color:#FFFFFF;}
+#block-prjEXP {padding: 3vw 0 0; width:100%; background-color:#129DE7; color:#FFFFFF;}
 #block-prjEXP .prjEXP-title { margin:3vw auto; text-align:center;}
 #block-prjEXP .prjs {margin-top:2vw; overflow:hidden;}
 #block-prjEXP .prj {float:left; height:auto; width:240px; margin-left:105px;}
